--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Matangi:wght@300..900&family=Modak&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <div class="right_header">
+        <div class="left_header">
             <img src="" alt="" class="company_logo">
-            <h3 class="company_name"></h3>
+            <h3 class="company_name">Zephyre</h3>
         </div>
         <div class="middle">
             <a href="" class="btn">HOME</a>
