--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="left_header">
-            <img src="/assets/img/duck.png" alt="duck" class="company_logo">
+            <img src="assets/img/duck.png" alt="duck" class="company_logo">
             <h3 class="company_name">Zephyre</h3>
         </div>
         <div class="middle">
