reformat: changed fonts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Matangi:wght@300..900&family=Modak&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Slackey&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -18,11 +17,11 @@
         </div>
         <div class="middle">
             <a href="" class="btn">HOME</a>
-            <a href="" class="btn">Hero Page 1</a>
-            <a href="" class="btn">Hero Page 2</a>
-            <a href="" class="btn">Hero Page 3</a>
-            <a href="" class="btn">Hero Page 4</a>
-            <a href="" class="btn">Hero Page 5</a>
+            <a href="" class="btn">HERO PAGE 1</a>
+            <a href="" class="btn">HERO PAGE 2</a>
+            <a href="" class="btn">HERO PAGE 3</a>
+            <a href="" class="btn">HERO PAGE 4</a>
+            <a href="" class="btn">HERO PAGE 5</a>
         </div>
 
 
