--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Slackey&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <div class="left_header">
-            <img src="assets/img/duck.png" alt="duck" class="company_logo">
-            <h3 class="company_name">Zephyre</h3>
-        </div>
         <div class="middle">
             <a href="" class="btn">HOME</a>
-            <a href="" class="btn">HERO PAGE 1</a>
-            <a href="" class="btn">HERO PAGE 2</a>
-            <a href="" class="btn">HERO PAGE 3</a>
-            <a href="" class="btn">HERO PAGE 4</a>
-            <a href="" class="btn">HERO PAGE 5</a>
+            <a href="pages/page1/index.html" class="btn">FIRST</a>
+            <a href="" class="btn">SECOND</a>
+
+            <img src="assets/img/duck.png" alt="duck" class="company_logo">
+
+            <a href="" class="btn">THIRD</a>
+            <a href="" class="btn">FOURTH</a>
+            <a href="" class="btn">FIFTH</a>
         </div>
-
-
     </header>
+    <section class="section">
+        <div class="background"></div>
+    </section>
 </body>
 </html>
