--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="middle">
             <a href="" class="btn">HOME</a>
-            <a href="pages/page1/index.html" class="btn">FIRST</a>
+            <a href="../WD-Seatwork-2/pages/page1/index.html" class="btn">FIRST</a>
             <a href="" class="btn">SECOND</a>
 
             <img src="assets/img/duck.png" alt="duck" class="company_logo">
