--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </div>
     </header>
     <section class="section">
-        <div class="background"></div>
+        <div class="background">
+            <img src="./assets/img/background.gif" alt="background">
+        </div>
     </section>
 </body>
 </html>
