--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <div class="background">
             <img src="./assets/img/background.gif" alt="background">
         </div>
+        <div class="content">
+            <h1>This is foreground content</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut minima saepe accusamus hic repellat commodi earum harum nam dolore? Veniam eum fugiat ut quod earum at repellendus amet ratione esse.</p>
+        </div>
     </section>
 </body>
 </html>
