fixed: connection of buttons of home and page 1

--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/pages/page1/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -12,11 +12,11 @@
 <body>
     <header class="header">
         <div class="middle">
-            <a href="" class="btn">HOME</a>
-            <a href="pages/page1/index.html" class="btn">FIRST</a>
+            <a href="../../index.html" class="btn">HOME</a>
+            <a href="" class="btn">FIRST</a>
             <a href="" class="btn">SECOND</a>
 
-            <img src="assets/img/duck.png" alt="duck" class="company_logo">
+            <img src="../../assets/img/duck.png" alt="duck" class="company_logo">
 
             <a href="" class="btn">THIRD</a>
             <a href="" class="btn">FOURTH</a>
@@ -24,7 +24,13 @@
         </div>
     </header>
     <section class="section">
-        <div class="background"></div>
+        <div class="background">
+            <img src="./assets/img/background.gif" alt="background">
+        </div>
+        <div class="content">
+            <h1>This is foreground content</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut minima saepe accusamus hic repellat commodi earum harum nam dolore? Veniam eum fugiat ut quod earum at repellendus amet ratione esse.</p>
+        </div>
     </section>
 </body>
 </html>
