feat: added contents for page1

--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -25,11 +25,14 @@
     </header>
     <section class="section">
         <div class="background">
-            <img src="./assets/img/background.gif" alt="background">
+            <img src="../../assets/img/background_page1.jpg">
         </div>
         <div class="content">
-            <h1>This is foreground content</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut minima saepe accusamus hic repellat commodi earum harum nam dolore? Veniam eum fugiat ut quod earum at repellendus amet ratione esse.</p>
+            <div class="left">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sapiente distinctio, enim ex saepe eos quisquam autem animi unde dolor quo? Beatae quod, sapiente qui libero quas ratione vero voluptates?
+                </h1>
+            </div>
+            <img src="../../assets/img/cove.png" alt="" class="image">
         </div>
     </section>
 </body>
