feat: connected other pages

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header">
         <div class="middle">
             <a href="" class="btn">HOME</a>
-            <a href="../WD-Seatwork-2/pages/page1/index.html" class="btn">FIRST</a>
-            <a href="" class="btn">SECOND</a>
+            <a href="pages/page1/index.html" class="btn">FIRST</a>
+            <a href="pages/page2/index.html" class="btn">SECOND</a>
 
             <img src="assets/img/duck.png" alt="duck" class="company_logo">
 
-            <a href="" class="btn">THIRD</a>
-            <a href="" class="btn">FOURTH</a>
-            <a href="" class="btn">FIFTH</a>
+            <a href="pages/page3/index.html" class="btn">THIRD</a>
+            <a href="pages/page4/index.html" class="btn">FOURTH</a>
+            <a href="pages/page5/index.html" class="btn">FIFTH</a>
         </div>
     </header>
     <section class="section">
