feat: added css on page 1

--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <header class="header">
         <div class="middle">
             <a href="../../index.html" class="btn">HOME</a>
             <a href="" class="btn">FIRST</a>
-            <a href="" class="btn">SECOND</a>
+            <a href="../page2/index.html" class="btn">SECOND</a>
 
             <img src="../../assets/img/duck.png" alt="duck" class="company_logo">
 
@@ -29,10 +27,33 @@
         </div>
         <div class="content">
             <div class="left">
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sapiente distinctio, enim ex saepe eos quisquam autem animi unde dolor quo? Beatae quod, sapiente qui libero quas ratione vero voluptates?
-                </h1>
+                <div class="upper">
+                    <img src="../../assets/img/cove.png" alt="" class="image">
+                </div>
+                <div class="lower">
+                    <a href="" class="content_icon">
+                        <span class="material-symbols-outlined">tag</span>
+                    </a>
+                    <a href="" class="content_icon">
+                        <span class="material-symbols-outlined">contacts</span>
+                    </a>
+                    <a href="" class="content_icon">
+                        <span class="material-symbols-outlined">attach_email</span>
+                    </a>
+                </div>
             </div>
-            <img src="../../assets/img/cove.png" alt="" class="image">
+            <div class="right">
+                <div class="upper">
+                    <h1 class="text">Cove Holden</h1>
+                    <h4 class="italic text">"You were a strange person in a strange place but, in that moment, you were exactly what I needed."</h4>
+                </div>
+                <div class="lower">
+                    <a href="" class="content_btn">ABOUT ME</a>
+                    <a href="" class="content_btn">PROJECTS</a>
+                    <a href="" class="content_btn">GALLERY</a>
+                    <a href="" class="content_btn">REFERENCES</a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
