--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -16,9 +16,9 @@
 
             <img src="../../assets/img/duck.png" alt="duck" class="company_logo">
 
-            <a href="" class="btn">THIRD</a>
-            <a href="" class="btn">FOURTH</a>
-            <a href="" class="btn">FIFTH</a>
+            <a href="../page3/index.html" class="btn">THIRD</a>
+            <a href="../page4/index.html" class="btn">FOURTH</a>
+            <a href="../page5/index.html" class="btn">FIFTH</a>
         </div>
     </header>
     <section class="section">
