reformat: added colors when button is active

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="middle">
-            <a href="" class="btn">HOME</a>
+            <a href="" class="btn active">HOME</a>
             <a href="pages/page1/index.html" class="btn">FIRST</a>
             <a href="pages/page2/index.html" class="btn">SECOND</a>
 
