--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -12,13 +12,13 @@
         <div class="middle">
             <a href="../../index.html" class="btn">HOME</a>
             <a href="../page1/index.html" class="btn">FIRST</a>
-            <a href="../page2/index.html" class="btn">SECOND</a>
+            <a href="../page2/index.html" class="btn active">SECOND</a>
 
             <img src="../../assets/img/duck.png" alt="duck" class="company_logo">
 
-            <a href="" class="btn">THIRD</a>
-            <a href="" class="btn">FOURTH</a>
-            <a href="" class="btn">FIFTH</a>
+            <a href="../page3/index.html" class="btn">THIRD</a>
+            <a href="../page4/index.html" class="btn">FOURTH</a>
+            <a href="./page5/index.html" class="btn">FIFTH</a>
         </div>
     </header>
     <div class="image">
