--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="middle">
             <a href="../../index.html" class="btn">HOME</a>
-            <a href="" class="btn">FIRST</a>
+            <a href="" class="btn active">FIRST</a>
             <a href="../page2/index.html" class="btn">SECOND</a>
 
             <img src="../../assets/img/duck.png" alt="duck" class="company_logo">
