feat: added page 3

--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -12,17 +12,27 @@
         <div class="middle">
             <a href="../../index.html" class="btn">HOME</a>
             <a href="../page1/index.html" class="btn">FIRST</a>
-            <a href="../page2/index.html" class="btn active">SECOND</a>
+            <a href="../page2/index.html" class="btn">SECOND</a>
 
             <img src="../../assets/img/duck.png" alt="duck" class="company_logo">
 
-            <a href="../page3/index.html" class="btn">THIRD</a>
+            <a href="../page3/index.html" class="btn active">THIRD</a>
             <a href="../page4/index.html" class="btn">FOURTH</a>
             <a href="./page5/index.html" class="btn">FIFTH</a>
         </div>
     </header>
     <section class="section">
-        <img src="" alt="">
+        <div class="left">
+            <a href="" class="content_btn">About</a>
+            <a href="" class="content_btn">Magic</a>
+            <a href="" class="content_btn">Gallery</a>
+            <h1 class="title">Grim</h1>
+            <h3 class="subtitle">Ramshackle Dorm</h3>
+            <p class="description">A monster who aspires to be a great mage. He will eat anything and everything, and his tendency to get carried away often gets him and the main character into trouble.</p>
+            <a href="" class="content_btn">More about Grim</a>
+        </div>
+        <div class="right"></div>
+        <img src="../../assets/img/grim.png" alt="grim" class="image" >
     </section>
 </body>
 </html>
