reformat: modified css of page 3

--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -23,16 +23,22 @@
     </header>
     <section class="section">
         <div class="left">
-            <a href="" class="content_btn">About</a>
-            <a href="" class="content_btn">Magic</a>
-            <a href="" class="content_btn">Gallery</a>
-            <h1 class="title">Grim</h1>
-            <h3 class="subtitle">Ramshackle Dorm</h3>
-            <p class="description">A monster who aspires to be a great mage. He will eat anything and everything, and his tendency to get carried away often gets him and the main character into trouble.</p>
-            <a href="" class="content_btn">More about Grim</a>
+            <div class="contents">
+
+            <h1 class="title">Psyduck</h1>
+
+            <div class="buttons">
+                <a href="" class="content_btn">About</a>
+                <a href="" class="content_btn">Stats</a>
+                <a href="" class="content_btn">Gallery</a>
+            </div>
+            <p class="description">A duck-like Pokémon, Psyduck is constantly stunned by its headache, and usually just stands vacantly, trying to calm itself.</p>
+
+            <a href="" class="content_btn">Learn More</a>
+            <div/>
         </div>
         <div class="right"></div>
-        <img src="../../assets/img/grim.png" alt="grim" class="image" >
+        <img src="../../assets/img/psyduck.png" alt="grim" class="image" >
     </section>
 </body>
 </html>
