reformat: modified css to fit contents

--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -35,10 +35,11 @@
             <p class="description">A duck-like Pokémon, Psyduck is constantly stunned by its headache, and usually just stands vacantly, trying to calm itself.</p>
 
             <a href="" class="content_btn">Learn More</a>
-            <div/>
         </div>
-        <div class="right"></div>
-        <img src="../../assets/img/psyduck.png" alt="grim" class="image" >
+        </div>
+        <div class="right">
+            <img src="../../assets/img/psyduck.png" alt="grim" class="image" >
+        </div>
     </section>
 </body>
 </html>
