reformat: changed placement of text in css

--- a/pages/page4/index.html
+++ b/pages/page4/index.html
@@ -24,7 +24,7 @@
     <section class="section">
         <img src="../../assets/img/tennant.png" alt="" class="image">
 
-        <h1 class="back_text">Reverse 1999</h1>
+        <h1 class="back_text">R: 1999</h1>
         <h3 class="front_text top">Ada</h3>
         <h1 class="front_text bottom">Tennant</h1>
     </section>
