--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -18,7 +18,7 @@
 
             <a href="../page3/index.html" class="btn active">THIRD</a>
             <a href="../page4/index.html" class="btn">FOURTH</a>
-            <a href="./page5/index.html" class="btn">FIFTH</a>
+            <a href="../page5/index.html" class="btn">FIFTH</a>
         </div>
     </header>
     <section class="section">
