reformat: added content and modified css in home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -28,8 +28,11 @@
             <img src="./assets/img/background.gif" alt="background">
         </div>
         <div class="content">
-            <h1>This is foreground content</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut minima saepe accusamus hic repellat commodi earum harum nam dolore? Veniam eum fugiat ut quod earum at repellendus amet ratione esse.</p>
+            <h1 class="title">Hero Sections</h1>
+            <h3 class="subtitle">
+                WD-Seatwork-2
+            </h3>
+            <h6 class="name">Alezzandra Isabel B. Gregorio</h6>
         </div>
     </section>
 </body>
